# vulkan-renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile.bat
shaders/: simple_shader.frag  simple_shader.vert  simple_vert.spv
source/: CMakeLists.txt  core.cpp  core.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  main.cpp  pipeline.cpp  pipeline.hpp  renderitem.cpp  renderitem.hpp  swapchain.cpp  swapchain.hpp  vextensions.hpp  vlayers.cpp  vlayers.hpp  vulkan-engine.cpp  vulkan-engine.h  window.cpp  window.hpp
